# internal/controller/quiz/GetByIDAdmin.go
@@ -2,6 +2,7 @@ package quiz
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/nurzzaat/create_AI_quiz/internal/models"
@@ -10,12 +11,12 @@ import (
 // @Tags		Quiz
 // @Accept		json
 // @Produce	json
-// @Param		quiz	body	models.Quiz	true	"quiz"
+// @Param		id	path	int	true	"id"
 // @Security	ApiKeyAuth
 // @Success	200		{object}	models.SuccessResponse
 // @Failure	default	{object}	models.ErrorResponse
-// @Router	/quiz [post]
-func (qc *QuizController) Create(c *gin.Context) {
+// @Router	/quiz/admin/{id} [get]
+func (qc *QuizController) GetByIDAdmin(c *gin.Context) {
 	roleID := c.GetUint("roleID")
 	if roleID == 2 {
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
@@ -29,26 +30,14 @@ func (qc *QuizController) Create(c *gin.Context) {
 		return
 	} 
 
-	userID := c.GetUint("userID")
-	var quiz models.Quiz
-	if err := c.ShouldBind(&quiz); err != nil{
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{
-			Result: []models.ErrorDetail{
-				{
-					Code:    "ERROR_BIND_DATA",
-					Message: "Error on binding data",
-				},
-			},
-		})
-		return
-	}
-	id  ,err := qc.QuizRepository.Create(c , quiz , userID)
+	id , _ := strconv.Atoi(c.Param("id"))
+	quiz , err := qc.QuizRepository.GetByIDAdmin(c , id)
 	if err != nil{
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
 			Result: []models.ErrorDetail{
 				{
-					Code:    "ERROR_CREATE_QUIZ",
-					Message: "Can't create quiz",
+					Code:    "ERROR_GET_QUIZ",
+					Message: "Can't get quiz",
 					Metadata: models.Properties{
 						Properties1: err.Error(),
 					},
@@ -57,5 +46,5 @@ func (qc *QuizController) Create(c *gin.Context) {
 		})
 		return
 	}
-	c.JSON(200 , models.SuccessResponse{Result: id})
+	c.JSON(200 , models.SuccessResponse{Result: quiz})
 }
