# internal/controller/quiz/GetByIDUser.go
@@ -2,6 +2,7 @@ package quiz
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/nurzzaat/create_AI_quiz/internal/models"
@@ -10,45 +11,34 @@ import (
 // @Tags		Quiz
 // @Accept		json
 // @Produce	json
-// @Param		quiz	body	models.Quiz	true	"quiz"
+// @Param		id	path	int	true	"id"
 // @Security	ApiKeyAuth
 // @Success	200		{object}	models.SuccessResponse
 // @Failure	default	{object}	models.ErrorResponse
-// @Router	/quiz [post]
-func (qc *QuizController) Create(c *gin.Context) {
+// @Router	/quiz/user/{id} [get]
+func (qc *QuizController) GetByIDUser(c *gin.Context) {
 	roleID := c.GetUint("roleID")
-	if roleID == 2 {
+	if roleID == 1 {
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
 			Result: []models.ErrorDetail{
 				{
-					Code:    "Admin is required",
+					Code:    "User is required",
 					Message: "You are not admin user",
 				},
 			},
 		})
 		return
 	} 
-
 	userID := c.GetUint("userID")
-	var quiz models.Quiz
-	if err := c.ShouldBind(&quiz); err != nil{
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{
-			Result: []models.ErrorDetail{
-				{
-					Code:    "ERROR_BIND_DATA",
-					Message: "Error on binding data",
-				},
-			},
-		})
-		return
-	}
-	id  ,err := qc.QuizRepository.Create(c , quiz , userID)
+
+	id , _ := strconv.Atoi(c.Param("id"))
+	quiz , err := qc.QuizRepository.GetByIDUser(c , id , userID)
 	if err != nil{
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
 			Result: []models.ErrorDetail{
 				{
-					Code:    "ERROR_CREATE_QUIZ",
-					Message: "Can't create quiz",
+					Code:    "ERROR_GET_QUIZ",
+					Message: "Can't get quiz",
 					Metadata: models.Properties{
 						Properties1: err.Error(),
 					},
@@ -57,5 +47,5 @@ func (qc *QuizController) Create(c *gin.Context) {
 		})
 		return
 	}
-	c.JSON(200 , models.SuccessResponse{Result: id})
+	c.JSON(200 , models.SuccessResponse{Result: quiz})
 }
